// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stars should show a Stars with default styling 1`] = `
<View
  accessibilityLabel="5 stars"
  style={
    Array [
      Object {
        "backgroundColor": "#ffe500",
        "padding": 0,
        "paddingBottom": 2,
        "paddingHorizontal": 4.666666666666667,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "fontFamily": "GuardianIcons-Regular",
        "fontSize": 20,
        "letterSpacing": 0.25,
        "lineHeight": 20,
      }
    }
  >
    ★★★★★
  </Text>
</View>
`;

exports[`Stars should show a Stars with smallItems styling 1`] = `
<View
  accessibilityLabel="5 stars"
  style={
    Array [
      Object {
        "backgroundColor": "#ffe500",
        "padding": 0,
        "paddingBottom": 2,
        "paddingHorizontal": 4.666666666666667,
      },
      Object {
        "flex": 0,
      },
    ]
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "fontFamily": "GuardianIcons-Regular",
        "fontSize": 20,
        "letterSpacing": 0.25,
        "lineHeight": 20,
      }
    }
  >
    ★★★★★
  </Text>
</View>
`;

exports[`Stars should show a Stars with trailImage styling 1`] = `
<View
  accessibilityLabel="5 stars"
  style={
    Array [
      Object {
        "backgroundColor": "#ffe500",
        "padding": 0,
        "paddingBottom": 2,
        "paddingHorizontal": 4.666666666666667,
      },
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
      },
    ]
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "fontFamily": "GuardianIcons-Regular",
        "fontSize": 20,
        "letterSpacing": 0.25,
        "lineHeight": 20,
      }
    }
  >
    ★★★★★
  </Text>
</View>
`;
